--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,9 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+
+###############################################################################
+# Ensure all .cpp and .h files use UTF-8 encoding
+###############################################################################
+*.cpp text eol=lf
+*.h text eol=lf
