添加登录(sysdba无需密码版）

--- a/dbms.vcxproj
+++ b/dbms.vcxproj
@@ -36,7 +36,7 @@
     <Import Project="$(QtMsBuild)\qt_defaults.props" />
   </ImportGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
-    <QtInstall>6.7.0_msvc2019_64</QtInstall>
+    <QtInstall>6.2.13_msvc2019_64</QtInstall>
     <QtModules>core;gui;widgets</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
@@ -92,14 +92,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="login.cpp" />
     <ClCompile Include="user.cpp" />
     <QtRcc Include="dbms.qrc" />
     <QtUic Include="dbms.ui" />
     <QtMoc Include="dbms.h" />
     <ClCompile Include="dbms.cpp" />
     <ClCompile Include="main.cpp" />
+    <QtUic Include="login.ui" />
   </ItemGroup>
   <ItemGroup>
+    <QtMoc Include="login.h" />
     <ClInclude Include="user.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
