--- a/dbms.vcxproj
+++ b/dbms.vcxproj
@@ -93,8 +93,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="dbManager.cpp" />
     <ClCompile Include="login.cpp" />
     <ClCompile Include="database.cpp" />
+    <ClCompile Include="table.cpp" />
     <ClCompile Include="user.cpp" />
     <QtRcc Include="dbms.qrc" />
     <QtUic Include="dbms.ui" />
@@ -106,6 +108,9 @@
   <ItemGroup>
     <QtMoc Include="login.h" />
     <ClInclude Include="database.h" />
+    <ClInclude Include="dbManager.h" />
+    <ClInclude Include="field.h" />
+    <ClInclude Include="table.h" />
     <ClInclude Include="user.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
