--- a/dbms.vcxproj.filters
+++ b/dbms.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="database.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dbManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="login.h">
