--- a/dbms.vcxproj
+++ b/dbms.vcxproj
@@ -37,7 +37,7 @@
   </ImportGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
     <QtInstall>6.2.13_msvc2019_64</QtInstall>
-    <QtInstall>6.7.0_msvc2019_64</QtInstall>
+    <QtInstall>6.2.13_msvc2019_64</QtInstall>
     <QtModules>core;gui;widgets</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
@@ -97,6 +97,8 @@
     <ClCompile Include="login.cpp" />
     <ClCompile Include="database.cpp" />
     <ClCompile Include="mainWindow.cpp" />
+    <ClCompile Include="output.cpp" />
+    <ClCompile Include="parse.cpp" />
     <ClCompile Include="table.cpp" />
     <ClCompile Include="Record.cpp" />
     <ClCompile Include="user.cpp" />
@@ -111,6 +113,8 @@
     <ClInclude Include="database.h" />
     <QtMoc Include="mainWindow.h" />
     <ClInclude Include="dbManager.h" />
+    <ClInclude Include="output.h" />
+    <ClInclude Include="parse.h" />
     <ClInclude Include="Record.h" />
     <ClInclude Include="user.h" />
   </ItemGroup>
