--- a/dbms.vcxproj.filters
+++ b/dbms.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="output.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="table.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="login.h">
