--- a/dbms.vcxproj
+++ b/dbms.vcxproj
@@ -111,7 +111,10 @@
     <QtMoc Include="ui\login.h" />
     <ClInclude Include="base\database.h" />
     <QtMoc Include="ui\mainWindow.h" />
+    <ClInclude Include="databaseBlock.h" />
+    <ClInclude Include="fieldBlock.h" />
     <ClInclude Include="manager\dbManager.h" />
+    <ClInclude Include="tableBlock.h" />
     <ClInclude Include="ui\output.h" />
     <ClInclude Include="manager\parse.h" />
     <ClInclude Include="base\Record.h" />
