--- a/dbms.vcxproj
+++ b/dbms.vcxproj
@@ -38,7 +38,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
     <QtModules>core;gui;widgets</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
-    <QtInstall>6.5.3_msvc2019_64</QtInstall>
+    <QtInstall>6.2.13_msvc2019_64</QtInstall>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
     <QtModules>core;gui;widgets</QtModules>
@@ -102,6 +102,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="debug.cpp" />
     <ClCompile Include="manager\dbManager.cpp" />
     <ClCompile Include="ui\login.cpp" />
     <ClCompile Include="base\database.cpp" />
@@ -122,6 +123,7 @@
     <ClInclude Include="base\database.h" />
     <QtMoc Include="ui\mainWindow.h" />
     <ClInclude Include="databaseBlock.h" />
+    <ClInclude Include="debug.h" />
     <ClInclude Include="fieldBlock.h" />
     <ClInclude Include="manager\dbManager.h" />
     <ClInclude Include="tableBlock.h" />
