完整性约束文件读写操作

--- a/dbms.vcxproj
+++ b/dbms.vcxproj
@@ -122,6 +122,7 @@
     <QtMoc Include="ui\login.h" />
     <ClInclude Include="base\database.h" />
     <QtMoc Include="ui\mainWindow.h" />
+    <ClInclude Include="constraintBlock.h" />
     <ClInclude Include="databaseBlock.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="fieldBlock.h" />
