--- a/dbms.vcxproj
+++ b/dbms.vcxproj
@@ -39,12 +39,12 @@
     <QtModules>core;gui;widgets</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
     <QtInstall>6.2.13_msvc2019_64</QtInstall>
-    <QtInstall>6.2.13_msvc2019_64</QtInstall>
+    <QtInstall>6.7.0_msvc2019_64</QtInstall>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
     <QtModules>core;gui;widgets</QtModules>
     <QtBuildConfig>release</QtBuildConfig>
-    <QtInstall>6.5.3_msvc2019_64</QtInstall>
+    <QtInstall>6.7.0_msvc2019_64</QtInstall>
   </PropertyGroup>
   <Target Name="QtMsBuildNotFound" BeforeTargets="CustomBuild;ClCompile" Condition="!Exists('$(QtMsBuild)\qt.targets') or !Exists('$(QtMsBuild)\qt.props')">
     <Message Importance="High" Text="QtMsBuild: could not locate qt.targets, qt.props; project may not build correctly." />
@@ -103,6 +103,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="base\record\record_delete.cpp" />
+    <ClCompile Include="base\record\record_insert.cpp" />
+    <ClCompile Include="base\record\record_select.cpp" />
+    <ClCompile Include="base\record\record_update.cpp" />
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="manager\dbManager.cpp" />
     <ClCompile Include="ui\login.cpp" />
@@ -111,7 +115,7 @@
     <ClCompile Include="ui\output.cpp" />
     <ClCompile Include="manager\parse.cpp" />
     <ClCompile Include="base\table.cpp" />
-    <ClCompile Include="base\Record.cpp" />
+    <ClCompile Include="base\record\record_utils.cpp" />
     <ClCompile Include="base\user.cpp" />
     <QtRcc Include="dbms.qrc" />
     <QtUic Include="ui\dbms.ui" />
@@ -131,7 +135,7 @@
     <ClInclude Include="tableBlock.h" />
     <ClInclude Include="ui\output.h" />
     <ClInclude Include="manager\parse.h" />
-    <ClInclude Include="base\Record.h" />
+    <ClInclude Include="base\record\Record.h" />
     <ClInclude Include="base\table.h" />
     <ClInclude Include="base\user.h" />
   </ItemGroup>
