--- a/dbms.vcxproj.filters
+++ b/dbms.vcxproj.filters
@@ -106,6 +106,9 @@
     <ClCompile Include="base\record\record_update.cpp">
       <Filter>base\record</Filter>
     </ClCompile>
+    <ClCompile Include="base\record\record_check.cpp">
+      <Filter>base\record</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tableBlock.h">
