输出删除记录数以及更新记录数

--- a/dbms.vcxproj.filters
+++ b/dbms.vcxproj.filters
@@ -155,6 +155,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <QtUic Include="login.ui" />
+    <QtUic Include="login.ui">
+      <Filter>ui</Filter>
+    </QtUic>
   </ItemGroup>
 </Project>
