--- a/dbms.vcxproj
+++ b/dbms.vcxproj
@@ -112,11 +112,11 @@
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="manager\dbManager.cpp" />
     <ClCompile Include="base\record\record_check.cpp" />
-    <ClCompile Include="parse_DCL.cpp" />
-    <ClCompile Include="parse_DDL.cpp" />
-    <ClCompile Include="parse_DML.cpp" />
-    <ClCompile Include="parse_DQL.cpp" />
-    <ClCompile Include="parse_util.cpp" />
+    <ClCompile Include="parse\parse_DCL.cpp" />
+    <ClCompile Include="parse\parse_DDL.cpp" />
+    <ClCompile Include="parse\parse_DML.cpp" />
+    <ClCompile Include="parse\parse_DQL.cpp" />
+    <ClCompile Include="parse\parse_util.cpp" />
     <ClCompile Include="base\table\table_tdf.cpp" />
     <ClCompile Include="base\table\table_tic.cpp" />
     <ClCompile Include="base\table\table_tid.cpp" />
