--- a/dbms.vcxproj.filters
+++ b/dbms.vcxproj.filters
@@ -140,7 +140,12 @@
     <ClCompile Include="transaction\TransactionManager.cpp" />
     <ClCompile Include="parse\parse.cpp" />
     <ClCompile Include="base\BTree_find.cpp" />
-    <ClCompile Include="base\record\record_index.cpp" />
+    <ClCompile Include="base\record\record_update_index.cpp">
+      <Filter>base\record</Filter>
+    </ClCompile>
+    <ClCompile Include="base\record\record_select_index.cpp">
+      <Filter>base\record</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="debug.h">
